# distributed-sse-for-llm-response

./: .gitignore  CLAUDE.md  README.md
demo/chat-ui/: README.md  index.html
demo/dashboards/: sse-metrics.json
demo/load-generator/: Dockerfile  README.md  go.mod  job.yaml  main.go  run-loadtest.sh
docs/: architecture.md  security-inspection-patterns.md
kubernetes/base/llm/: deployment.yaml  kustomization.yaml  redis.yaml
kubernetes/base/llm-stream-proxy/: deployment.yaml
kubernetes/base/nats-core/: core-cluster.yaml  kustomization.yaml
kubernetes/base/nats-leaf/: kustomization.yaml  leaf-node.yaml
kubernetes/base/redis-nats-bridge/: deployment.yaml  kustomization.yaml
kubernetes/base/sse-adapter/: deployment.yaml  kustomization.yaml
kubernetes/overlays/edge-us-lax/: kustomization.yaml
kubernetes/overlays/edge-us-mia/: kustomization.yaml
kubernetes/overlays/edge-us-ord/: kustomization.yaml
kubernetes/overlays/origin/: kustomization.yaml
scripts/: build-push-images.sh  deploy-edge.sh  deploy-origin.sh  run-demo.sh
src/llm-stream-proxy/: Dockerfile  go.mod  main.go
src/redis-nats-bridge/: Dockerfile  go.mod  main.go
src/spin-functions/nats-publisher/: Cargo.toml  spin.toml
src/spin-functions/nats-subscriber/: Cargo.toml  spin.toml
src/spin-functions/nats-subscriber/src/: lib.rs
src/sse-adapter/: Dockerfile  go.mod  go.sum  main.go  sse_handler.go
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.example  tfplan  variables.tf
terraform/modules/lke-cluster/: main.tf
(+4 files in other folders)
