[package]
name = "nats-subscriber"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Spin WASM function for NATS subscription/inspection example"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk = "2.0"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# For tests

[profile.release]
opt-level = "s"
lto = true
